--- a/PetShop.RestAPI/PetShop.RestAPI.csproj
+++ b/PetShop.RestAPI/PetShop.RestAPI.csproj
@@ -4,5 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Entities\PetShop.Core.Entities.csproj" />
+    <ProjectReference Include="..\Core\PetShop.Core.csproj" />
+    <ProjectReference Include="..\PetShop.Infrastructure.Data\PetShop.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 
 </Project>
