--- a/PetShop.RestAPI/PetShop.RestAPI.csproj
+++ b/PetShop.RestAPI/PetShop.RestAPI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core.Entities\PetShop.Core.Entities.csproj" />
     <ProjectReference Include="..\Core\PetShop.Core.csproj" />
     <ProjectReference Include="..\PetShop.Infrastructure.Data\PetShop.Infrastructure.Data.csproj" />
